# faststripe

./: .env.example  .gitignore  00_spec.html  00_spec.md  02_page.html  02_page.md  CHANGELOG.md  README.md  core.html  core.html.md  index.html  index.html.md  llms-ctx.txt  llms.txt  pyproject.toml  robots.txt  search.json  settings.ini  sitemap.xml
faststripe/: __init__.py  _modidx.py  core.py  core.pyi  endpoints.py  spec.py
how_to/: one_time_payments.html  one_time_payments.html.md  subscriptions.html  subscriptions.html.md
nbs/: 00_core.ipynb  00_spec.ipynb  01_core.ipynb  02_page.ipynb  CNAME  _quarto.yml  index.ipynb  llms.txt  nbdev.yml  sidebar.yml
nbs/explains/: 00_architecture.ipynb  01_openapi_integration.ipynb
nbs/how_to/: 00_one_time_payments.ipynb  01_subscriptions.ipynb  02_customer_management.ipynb  03_webhooks.ipynb
nbs/reference/: 00_api_reference.ipynb
scripts/: mk_pyi.py
