[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name="faststripe"
dynamic = ["version"]
description = "Fastest way to use the Stripe API in python"
readme = "README.md"
requires-python=">=3.9"
license = {text = "Apache-2.0"}
authors = [{name = "ncoop57", email = "nathanacooper@proton.me"}]
keywords = ['nbdev', 'jupyter', 'notebook', 'python']
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = ["fastcore"]

[project.urls]
Repository = "https://github.com/AnswerDotAI/faststripe"
Documentation = "https://AnswerDotAI.github.io/faststripe"

[project.entry-points.nbdev]
faststripe = "faststripe._modidx:d"

[project.scripts]
faststripe_update=faststripe.spec:update_version

[tool.setuptools.dynamic]
version = {attr = "faststripe.__version__"}

[project.scripts]
faststripe_update=faststripe.spec:update_version

[tool.setuptools.packages.find]
include = ["faststripe"]

[project.optional-dependencies]
dev = ["llms-txt","nbdev"]

[tool.nbdev]
custom_sidebar = false
